# cgfromscratch

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  video_manager.cpp
include/: camera.hpp  utils.hpp  video_manager.h  video_manager.hpp
